--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --mode production",
-    "start": "webpack-dev-server",
-    "server": "node server/server.js"
+    "start": "nodemon server/server.js"
   },
   "author": "Vlad Filonenko",
   "license": "ISC",
